--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: white;
   margin: 0;
   padding: 0;
 }
@@ -20,6 +20,25 @@ h6 {
   padding: 0 1rem;
 }
 
+.skip-links{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.skip-links a{
+  position: absolute;
+  top: -3em;
+  background-color: black;
+  color:white;
+  padding: .5em 1em;
+  font-weight: bold;
+}
+
+.skip-links a:focus{
+  top: 0;
+}
+
+
 img {
   width: 100%;
 }
@@ -30,6 +49,7 @@ img {
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
+  margin-bottom: 4rem;
 }
 
 .main-nav ul li {
